--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>Dino Money Game</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: center;
+            background-color: #f0f0f0;
+            color: #333;
         }
 
         #game-container {
             margin: 20px;
+            background-color: #ffd700;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         .button {
@@ -20,6 +26,10 @@
             margin: 10px;
             font-size: 16px;
             cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
         }
 
         #money-display {
@@ -32,98 +42,53 @@
             padding: 10px;
             border: 1px solid #ccc;
             display: inline-block;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
 
         .animal-image {
             max-width: 100px;
             max-height: 100px;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
 
 <div id="game-container">
-    <h1>Dino Money Game</h1>
-    <p id="money-display">Money: $<span id="money">1000</span></p>
+    <h1 style="color: #4CAF50;">Dino Money Game</h1>
+    <p id="money-display" style="color: #333;">Money: $<span id="money">1000</span></p>
 
     <div class="habitat" id="ground-habitat">
-        <h2>Ground Habitat</h2>
-        <p>Earnings: $<span id="ground-earnings">0</span> per second</p>
+        <h2 style="color: #4CAF50;">Ground Habitat</h2>
+        <p style="color: #333;">Earnings: $<span id="ground-earnings">0</span> per second</p>
         <button class="button" onclick="buyHabitat('Ground Habitat', 200, 1, 'ground')">Buy Ground Habitat ($200)</button>
-        <button class="button" onclick="buyAnimal('Komodo Dragon', 100, 2, 'komodo.jpg', 'ground')">Buy Komodo Dragon ($100)</button>
-        <button class="button" onclick="buyAnimal('T-Rex', 500, 10, 'trex.jpg', 'ground')">Buy T-Rex ($500)</button>
-        <button class="button" onclick="buyAnimal('Emu', 50, 1, 'emu.jpg', 'ground')">Buy Emu ($50)</button>
+        <button class="button" onclick="buyAnimal('Tyrannosaurus Rex', 500, 2, 'trex.jpg', 'ground')">Buy T-Rex ($500)</button>
+        <button class="button" onclick="buyAnimal('Stegosaurus', 300, 1.5, 'stegosaurus.jpg', 'ground')">Buy Stegosaurus ($300)</button>
+        <button class="button" onclick="buyAnimal('Velociraptor', 150, 0.5, 'velociraptor.jpg', 'ground')">Buy Velociraptor ($150)</button>
+        <button class="button" onclick="buyAnimal('Triceratops', 300, 1.5, 'triceratops.jpg', 'ground')">Buy Triceratops ($300)</button>
+        <button class="button" onclick="buyAnimal('Brachiosaurus', 800, 4, 'brachiosaurus.jpg', 'ground')">Buy Brachiosaurus ($800)</button>
         <!-- Add more buttons for other ground animals -->
+        <button class="button" onclick="buyAnimal('Ankylosaurus', 400, 2, 'ankylosaurus.jpg', 'ground')">Buy Ankylosaurus ($400)</button>
+        <button class="button" onclick="buyAnimal('Pachycephalosaurus', 600, 3, 'pachycephalosaurus.jpg', 'ground')">Buy Pachycephalosaurus ($600)</button>
+        <button class="button" onclick="buyAnimal('Dilophosaurus', 200, 1, 'dilophosaurus.jpg', 'ground')">Buy Dilophosaurus ($200)</button>
+        <button class="button" onclick="buyAnimal('Allosaurus', 250, 1.2, 'allosaurus.jpg', 'ground')">Buy Allosaurus ($250)</button>
+        <button class="button" onclick="buyAnimal('Spinosaurus', 700, 3.5, 'spinosaurus.jpg', 'ground')">Buy Spinosaurus ($700)</button>
+        <button class="button" onclick="buyAnimal('Parasaurolophus', 180, 0.9, 'parasaurolophus.jpg', 'ground')">Buy Parasaurolophus ($180)</button>
+        <button class="button" onclick="buyAnimal('Compsognathus', 80, 0.4, 'compsognathus.jpg', 'ground')">Buy Compsognathus ($80)</button>
+        <button class="button" onclick="buyAnimal('Utahraptor', 350, 1.8, 'utahraptor.jpg', 'ground')">Buy Utahraptor ($350)</button>
+        <button class="button" onclick="buyAnimal('Carnotaurus', 400, 2, 'carnotaurus.jpg', 'ground')">Buy Carnotaurus ($400)</button>
+        <button class="button" onclick="buyAnimal('Iguanodon', 250, 1.2, 'iguanodon.jpg', 'ground')">Buy Iguanodon ($250)</button>
+        <button class="button" onclick="buyAnimal('Microraptor', 150, 0.8, 'microraptor.jpg', 'ground')">Buy Microraptor ($150)</button>
+        <button class="button" onclick="buyAnimal('Dimorphodon', 250, 1, 'dimorphodon.jpg', 'ground')">Buy Dimorphodon ($250)</button>
+        <button class="button" onclick="buyAnimal('Archaeopteryx', 100, 0.5, 'archaeopteryx.jpg', 'ground')">Buy Archaeopteryx ($100)</button>
+        <button class="button" onclick="buyAnimal('Pteranodon', 350, 1.8, 'pteranodon.jpg', 'ground')">Buy Pteranodon ($350)</button>
+        <!-- Dynamically generate animal buttons -->
+        <div id="ground-animal-buttons"></div>
     </div>
 
     <div class="habitat" id="air-habitat">
-        <h2>Air Habitat</h2>
-        <p>Earnings: $<span id="air-earnings">0</span> per second</p>
-        <button class="button" onclick="buyHabitat('Air Habitat', 400, 3, 'air')">Buy Air Habitat ($400)</button>
-        <button class="button" onclick="buyAnimal('Pterodactyl', 200, 4, 'pterodactyl.jpg', 'air')">Buy Pterodactyl ($200)</button>
-        <button class="button" onclick="buyAnimal('Velociraptor', 150, 3, 'velociraptor.jpg', 'air')">Buy Velociraptor ($150)</button>
-        <button class="button" onclick="buyAnimal('Mech Suit', 1000, 20, 'mechsuit.jpg', 'air')">Buy Mech Suit ($1000)</button>
-        <button class="button" onclick="buyAnimal('Raptor', 200, 5, 'raptor.jpg', 'air')">Buy Raptor ($200)</button>
-        <!-- Add more buttons for other air animals -->
-    </div>
-
-    <!-- Add more habitats and animals as needed -->
-
-</div>
-
-<script>
-    let money = 1000;
-    let groundEarnings = 0;
-    let airEarnings = 0;
-
-    function buyHabitat(name, cost, multiplier, habitatType) {
-        const habitatElement = document.getElementById(`${habitatType}-habitat`);
-        if (money >= cost) {
-            money -= cost;
-            updateMoneyDisplay();
-            alert(`You bought a ${name} habitat! Animals in this habitat will earn ${multiplier} times more money.`);
-        } else {
-            alert("Not enough money to buy this habitat!");
-        }
-    }
-
-    function buyAnimal(name, cost, earnings, imageSrc, habitat) {
-        const habitatElement = document.getElementById(`${habitat}-habitat`);
-        if (money >= cost) {
-            money -= cost;
-            updateMoneyDisplay();
-            alert(`You bought a ${name} for your ${habitat} habitat! This animal will earn $${earnings} per second.`);
-            // Add logic here to handle the purchased animal and its earnings
-            if (habitat === 'ground') {
-                groundEarnings += earnings;
-                updateGroundEarnings();
-            } else if (habitat === 'air') {
-                airEarnings += earnings;
-                updateAirEarnings();
-            }
-        } else {
-            alert("Not enough money to buy this animal!");
-        }
-    }
-
-    function updateMoneyDisplay() {
-        document.getElementById("money").innerText = money;
-    }
-
-    function updateGroundEarnings() {
-        document.getElementById("ground-earnings").innerText = groundEarnings;
-    }
-
-    function updateAirEarnings() {
-        document.getElementById("air-earnings").innerText = airEarnings;
-    }
-
-    // Add a function to update earnings periodically based on the purchased animals
-    setInterval(function () {
-        money += groundEarnings + airEarnings;
-        updateMoneyDisplay();
-    }, 1000); // Update earnings every second
-</script>
-
-</body>
-</html>
+        <h2 style="color: #4CAF50;">Air Habitat</h2>
+        <p style="color: #333;">Earnings: $<span id="air-earnings">0</span> per second</p>
+        <button class="button" onclick="buyHabitat('Air Habitat
